--- a/loader/Dockerfile
+++ b/loader/Dockerfile
@@ -22,4 +22,4 @@ RUN python3 -m venv $VIRTUAL_ENV
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 RUN pip install -r requirements.txt
 
-# CMD ["python", "main.py"]
+CMD ["python", "main.py"]
